@@ -194,7 +194,8 @@ POPT_TABLE = [
     ("action",  'a', str, None, 0, 'Specify action',    "ACTION"), 
     ("options", 'p', str, None, 0, 'Specify options',   "OPTIONS_STRING"), 
     ("debug",   'd', str, None, 0, 'Enable debug logs', "LOGGER_NAME"), 
-    ("",    'l', None, None, 0, 'List Family Trees', ""),
+    ("",        'l', None, None, 0, 'List Family Trees', ""),
+    ("force-unlock", 'u', None, None, 0, 'Force unlock of family tree', ""),
 ]
 
 LONGOPTS = [
@@ -206,6 +207,7 @@ LONGOPTS = [
     "disable-crash-dialog", 
     "enable-sound",
     "espeaker=",
+    "force-unlock",
     "format=",
     "gdk-debug=", 
     "gdk-no-debug=", 
@@ -233,5 +235,5 @@ LONGOPTS = [
     "version", 
 ]
 
-SHORTOPTS = "O:i:o:f:a:p:d:lh?"
+SHORTOPTS = "O:i:o:f:a:p:d:lhu?"
 
